syntax = "proto3";

import "zitadel/object.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package zitadel.policy.v1;

option go_package ="github.com/caos/zitadel/pkg/grpc/member";

message Member {
    string user_id = 1;
    zitadel.v1.MetaData meta_data = 2;
    repeated string roles = 3;
    string user_name = 4; //TOOD: user name or preffered login name(s)
    string email = 5;
    string first_name = 6;
    string last_name = 7;
    string display_name = 8;
}

message SearchQuery {
    oneof query {
        FirstNameQuery first_name = 1;
        LastNameQuery last_name = 2;
        EmailQuery email = 3;
        UserIDQuery user_id = 4;
    }
}

message FirstNameQuery {
    string first_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message LastNameQuery {
    string last_name = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message EmailQuery {
    string email = 1;
    zitadel.v1.TextQueryMethod method = 2;
}

message UserIDQuery {
    string user_id = 1;
}

enum MemberFieldName {
    MEMBER_FIELD_NAME_UNSPECIFIED = 0;
}